--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bad-words": "^3.0.4",
+    "emojionearea": "^3.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "socket.io": "^3.0.4"
